--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wordly2",
+  "name": "wordly",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
