chore: updates gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Firebase related files
+firebase-debug.log
+firestore.indexes.json
+firestore.rules
+.firebaserc
