--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "@types/node": "^22.13.0",
     "axios": "^1.7.9",
     "react": "^18.3.1",
